1.Alignment of navbar-toggle button 2.Fixed issue with width of navbar image(brand image) 3.Removed extra box-shadow in themes for navbar

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -540,7 +540,8 @@ body {
       }
     }
     .navbar-toggle {
-      padding: 0;
+      margin-top: 4px;
+      margin-bottom: 4px;
       &:hover, &:focus {
         color: inherit;
       }
